@@ -1,3 +1,10 @@
+2012-05-03  Paul A. Rombouts  <p.a.rombouts@home.nl>
+
+	* src/cache.c
+	Make the rrset list used for purging circular with a sentinel node
+	instead of NULL terminated. This makes insertion and deletion of nodes
+	simpler and more efficient.
+
 2012-04-23  Paul A. Rombouts  <p.a.rombouts@home.nl>
 
 	* src/dns_query.c
